2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03318] Re: Passwords
	* etc.c (struct auth_path): added
		(passwords): added
		(dir_under): added
		(add_auth_pass_entry): added
		(find_auth_pass_entry): added
		(find_auth_user_passwd): added
		(loadPasswd): added
		(find_auth): dir_under()
		(add_auth_cookie): check file
	* file.c (find_auth_user_passwd): removed
		(getAuthCookie): use delText()
				check proxy
		(get_auth_cookie): removed
		(loadGeneralFile): auth_pu
	* proto.h (schemeToProxy): added
		(get_auth_cookie): removed
		(loadPasswd): added
		(find_auth_user_passwd): added
	* rc.c (sync_with_option): loadPasswd()
	* textlist.c (delValue): added
	* textlist.h (delValue): added
		(delText): added
	* url.c (HTTPrequest): seen_www_auth
		(schemeToProxy): added

2002-09-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03312] Re: Passwords
	* config.h.dist: PASSWD_FILE
	* file.c (find_auth_user_passwd): return if passwd_file == NULL

2002-09-11  Yuuichi Teranishi <teranisi@gohome.org>

	* [w3m-dev 03311] Re: Passwords
	* configure (config.h): default PASSWD_FILE
	* fm.h (passwd_file): default PASSWD_FILE

2002-09-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03307] add password_file support
	* file.c (find_auth_user_passwd): added
	* fm.h (passwd_file): added
	* rc.c (CMT_PASSWDFILE): added
		(passwdfile): added

2002-09-09  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03300] framebuffer: 8bit color support
	* w3mimg/fb/fb.c: support FB_VISUAL_PSEUDOCOLOR 256 colors

2002-09-09  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev 03299] remove file before copying (install-sh)
	* install-sh: remove file before copying

2002-09-09  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev 03298] [ -f instead of [ -e (configure)
	* configure: use test -f instead of test -e

2002-09-09  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev 03297] TERM=mlterm
	* terms.c (w3m_term_info_list): add mlterm
